--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@adonisjs/lucid": "^6.3.0",
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1"
   },
   "autoload": {
